@@ -73,8 +73,8 @@ OnePredictor =
 ',
               ifelse(VI, "library(BrailleR)", "library(knitr)"),
               '
-opts_chunk$set(dev=c("png", "pdf", "postscript", "svg"))
-opts_chunk$set(echo=FALSE, comment="", fig.path="',
+knitr::opts_chunk$set(dev=c("png", "pdf", "postscript", "svg"))
+knitr::opts_chunk$set(echo=FALSE, comment="", fig.path="',
               Folder, '/', .simpleCap(ResponseName), '.',
               .simpleCap(PredictorName),
               '-", fig.width=7)
