@@ -84,8 +84,8 @@ TwoFactors =
 ',
               ifelse(VI, "library(BrailleR)", "library(knitr)"),
               '
-opts_chunk$set(dev=c("png", "pdf", "postscript", "svg"))
-opts_chunk$set(echo=FALSE, comment="", fig.path="',
+knitr::opts_chunk$set(dev=c("png", "pdf", "postscript", "svg"))
+knitr::opts_chunk$set(echo=FALSE, comment="", fig.path="',
               Folder, '/', ResponseName, '.', Factor1Name, '.', Factor2Name,
               '-", fig.width=7)
 ```
