@@ -6,15 +6,15 @@
   its XML annotations. Then launches a browser tab to allow viewing and
   interactive exploration of the SVG diagram.}
 \usage{
-BrowseSVG(file="test", dir=".")
+BrowseSVG(file="test", dir=".", key=TRUE, view=interactive()) 
 }
 \arguments{
   \item{file}{the filename for the HTML file; this should correspond to
     basename of an existing SVG and its XML annotations}
-  \item{dir}{the in which HTML file is written and where R tries to
+  \item{dir}{the folder into which the HTML file is written and where R tries to
     locate the SVG and XML files}
   \item{key}{include key for explorer's keyboard commands in webpage}
-  \item{view}{launch in browser; this is the default when in interactive
+  \item{view}{launch in browser; this is the default when running in an interactive
   session}
 }
 \details{
@@ -24,6 +24,7 @@ BrowseSVG(file="test", dir=".")
 NULL. This function exists for its side effects only.
 }
 \references{
+to add following first demonstration/publication
 }
 \author{
 Volker Sorge
